# tdl-rust

tdl-api/: Cargo.toml  DockerFile  docker-compose.yml  entrypoint.sh
tdl-api/migrations/: 20250530012135_create_tasks_table.sql  20250530134508_init.down.sql  20250530134508_init.up.sql
tdl-api/src/: db.rs  main.rs  routes.rs
tdl-api/src/controllers/: echo_controller.rs  hello_controller.rs  mod.rs  task_controller.rs
tdl-api/src/models/: task.rs
tdl-api/src/services/: hello_service.rs  mod.rs  task_service.rs
tdl-cli/: Cargo.toml
tdl-cli/src/: intro.rs  main.rs  outro.rs  tasks.rs
tdl-cli/src/commands/: delete.rs  done.rs  help.rs  input.rs  list.rs  mod.rs  new.rs  priority.rs
tdl-cli/src/tasks/: tasks.json
