[package]
name = "tdl-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }